fixed background z-index

--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -16,6 +16,7 @@ body
     top: $navbar-heigth + $navbar-border-bottom-width
     height: 100%
     width: 100%
+    z-index: -1
 
 a:not(.btn)
   color: $font-color
