--- a/app/assets/stylesheets/variables.css.sass
+++ b/app/assets/stylesheets/variables.css.sass
@@ -4,7 +4,7 @@ $star-color: #FFE000
 $star-color-dark: #FFEA4C
 
 $max-transparent-background: rgba(0,0,0,0)
-$light-transparent-background: rgba(255,255,255,.1)
+$light-transparent-background: rgba(255,255,255,.3)
 $transparent-background: rgba(0,0,0,.2)
 $dark-transparent-background: rgba(0,0,0,.4)
 $very-dark-transparent-background: rgba(0,0,0,.6)
